@@ -3,13 +3,13 @@
 version=@abiname@@localversion@
 image_path=/boot/@image-stem@-$version
 
+if [ "$1" != upgrade ] && command -v linux-update-symlinks >/dev/null; then
+    linux-update-symlinks remove $version $image_path
+fi
+
 if [ -d /etc/kernel/postrm.d ]; then
     DEB_MAINT_PARAMS="$*" run-parts --report --exit-on-error --arg=$version \
 	      --arg=$image_path /etc/kernel/postrm.d
-fi
-
-if [ "$1" != upgrade ] && command -v linux-update-symlinks >/dev/null; then
-    linux-update-symlinks remove $version $image_path
 fi
 
 if [ "$1" = purge ]; then
