@@ -6,6 +6,7 @@ linux (4.6-1~exp3) UNRELEASED; urgency=medium
     linux-update-symlinks command (Closes: #692333, #815850).  Drop support
     for  minimal_swap, no_symlinks, use_hard_links and *_hook parameters in
     /etc/kernel-img.conf (Closes: #730073).
+  * linux-image: postrm: Update default symlinks before running hook scripts
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 04 Jun 2016 18:33:11 +0100
 
